# shellx

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: API.md  ARCHITECTURE.md  KASPERSKY.md  MACOS_RELEASE.md  PUBLIC_REPO.md  SHELLX_UI_RULES.md  THREAT_MODEL.md
scripts/: acp-driver.ts  build-macos.sh  build-windows-from-wsl.sh  build-windows.ps1  dev.sh  goal-driver.ts  mcp-health-probe.ts  test-build-run.ts  test-chat-rendering.tsx  test-chat-typing-performance.ts  test-composer-popovers.ts  test-file-preview-types.ts  test-git-workflows.ts  test-grouping.ts  test-markdown-links.ts  test-media-extraction.ts  test-outside-connector-inbox.ts  test-pending-local-events.ts  test-permission-pill.ts  test-preview-center.ts  test-release-readiness.ts  test-session-activity.ts  test-session-capabilities.ts  test-session-continuity.ts  test-session-media.ts  test-session-titles.ts  test-terminal-b.ts  test-transport-icons.ts  test-update-diagnostics.ts  test-update-notes.ts  test-user-store.ts  test-voice-chat.ts  test-work-preview-api.ts  test-work-preview.ts  wsl-window-capture.sh
skills/shellx-build-app/: SKILL.md
skills/shellx-fix-bug/: SKILL.md
skills/shellx-host/: SKILL.md
skills/shellx-polish-ui/: SKILL.md
skills/shellx-prepare-release/: SKILL.md
skills/shellx-review-repo/: SKILL.md
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/personas/: explore.md  general-purpose.md  implementer.md  release-manager.md  reviewer.md  security-auditor.md  test-writer.md  verifier.md
src-tauri/src/: acp.rs  build_orchestrator.rs  build_store.rs  build_types.rs  connections.rs  debug_api.rs  desktop_integration.rs  env_security.rs  goal_orchestrator.rs  grok_env.rs  host_mcp.rs  host_mem.rs  host_subagents.rs  lib.rs  loopback_security.rs  main.rs  mcp_events_tail.rs  mcp_health.rs  mcp_http.rs  mcp_marketplace.rs  outside_connector_runtime.rs  outside_connectors.rs  process_registry.rs  session_activity.rs  session_archive.rs  session_git.rs  skill_install.rs  subagent.rs  terminal.rs  text_sniff.rs  vault.rs  voice.rs  winproc.rs  work_preview.rs
src-tauri/tests/: skill_install_e2e.rs
src/assets/fonts/: LICENSE-Geist.txt
src/components/: ActivityBrowserModal.tsx  AttachmentMediaBoard.tsx  BottomPanel.tsx  BranchPicker.tsx  BuildRunCockpit.tsx  BuiltinDocModal.tsx  ChatOutput.tsx  CommandPalette.tsx  ConnectionEditor.tsx  ConnectionPicker.tsx  ConnectorInboxModal.tsx  ErrorBoundary.tsx  FilePreviewModal.tsx  FindPopover.tsx  GoalPlanReviewModal.tsx  HashAutocomplete.tsx  Header.tsx  HelpModal.tsx  LeftRail.tsx  MediaPreview.tsx  MicButton.tsx  PRCreateModal.tsx  PermissionModal.tsx  PermissionPill.tsx  PluginsModal.tsx  PreviewCenter.tsx  RightRail.tsx  RowActions.tsx  SessionTabs.tsx  Settings.tsx  ShikiHighlight.tsx  TasksPanel.tsx  TerminalTab.tsx  TerminalView.tsx  UpdateBanner.tsx  VaultPanel.tsx  WorkPreviewPanel.tsx  icons.tsx
src/components/settings/: AboutTab.tsx  ConnectionsTab.tsx  ConnectorsTab.tsx  DataTab.tsx  DeleteConfirm.tsx  DesktopTab.tsx  GeneralTab.tsx  ReleaseReadinessPanel.tsx  ShellxagentTab.tsx  VaultTab.tsx
src/lib/: auto-copy-selection.ts  build-run.ts  builtin-docs.ts  debug-api.ts  file-preview-types.ts  git-workflows.ts  grouping.ts  markdown-links.tsx  media-paths.ts  notify.ts  outside-connectors.ts  pending-local-events.ts  preview-center.ts  release-readiness.ts  session-activity.ts  session-capabilities.ts  session-continuity.ts  session-media.ts  session-titles.ts  shortcuts.ts  tauri-bridge.ts  transport-icons.ts  update-diagnostics.ts  update-notes.ts  userStore.ts  voice-chat.ts  work-preview.ts
src/styles/: tokens.css
src/types/: acp.ts
